Bug 126965 - [EMF] Drawing with underlined text looks fail
Summary: [EMF] Drawing with underlined text looks fail
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.2.1 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:26.8.0 target:26.2.2 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2019-08-16 08:46 UTC by faludiz
Modified: 2026-02-10 21:11 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
emf with underlined text (122.25 KB, image/x-emf)
2019-08-16 08:47 UTC, faludiz
Details
emf screenshot LO 6.4 (109.13 KB, image/png)
2019-08-16 09:00 UTC, Oliver Brinzing
Details
How it should looks like. (388.44 KB, image/png)
2021-07-06 21:37 UTC, Bartosz
Details
Minimal EMF image where bug is visible (2.99 KB, image/emf)
2023-07-07 13:52 UTC, Bartosz
Details
Minimal EMF image opened in MS Paint (97.46 KB, image/png)
2023-07-07 13:53 UTC, Bartosz
Details
emf file saved by ITR (30.53 KB, image/x-emf)
2023-10-22 08:33 UTC, faludiz
Details
emf file saved by ITR converted to PNG with IrfanView (119.29 KB, image/png)
2023-10-22 08:34 UTC, faludiz
Details
emf file saved by FreeTR (143.33 KB, image/x-emf)
2023-10-22 08:35 UTC, faludiz
Details
emf file saved by FreeTR converted to PNG with IrfanView (301.04 KB, image/png)
2023-10-22 08:35 UTC, faludiz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description faludiz 2019-08-16 08:46:34 UTC
Description:
emf drawings with underlined text looks fail: as shown as black rectangles
apache openoffice: no problem, looks well
microsoft office: no problem, looks well
i've tried on windows and ubuntu 19.04 with same bad results

Steps to Reproduce:
1. download this sample emf file: https://drive.google.com/open?id=1glGRnmrJJv2DDharAGWL3AIrx396SPmQ
2. insert into writer, draw, etc
3. look at the black rectangles

Actual Results:
black rectangles

Expected Results:
nice underlined texts


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 faludiz 2019-08-16 08:47:33 UTC
Created attachment 153432 [details]
emf with underlined text
Comment 2 Oliver Brinzing 2019-08-16 09:00:01 UTC
reproducible with:

Version: 5.4.7.2 (x64)
Build-ID: c838ef25c16710f8838b1faec480ebba495259d0
CPU-Threads: 4; BS: Windows 6.19; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: single

but *not* reproducible with:

Version: 4.4.7.2
Build-ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Gebietsschema: de_DE
Comment 3 Oliver Brinzing 2019-08-16 09:00:35 UTC
Created attachment 153433 [details]
emf screenshot LO 6.4
Comment 4 Oliver Brinzing 2019-08-16 11:45:41 UTC
not sure, but this *may* have started with:

https://gerrit.libreoffice.org/plugins/gitiles/core/+/8f2dd1df1d6cc94ebbc1149de72bc6d6dffa6533

commit 8f2dd1df1d6cc94ebbc1149de72bc6d6dffa6533	[log]
author	Khaled Hosny <khaledhosny@eglug.org>	
Wed Nov 02 23:52:06 2016 +0200
committer	Khaled Hosny <khaledhosny@eglug.org>	
Thu Nov 03 00:17:06 2016 +0000
tree db496889434c484a87b13ffcc4650d65e6672129
parent c8be45889217c555e4bec92af838d0524ceba4e0 [diff]

Revert "Revert "Enable the new text layout engine by default""
This reverts commit 3950166877bf1308f9e449992e20b558342af825.


/cygdrive/d/sources/bibisect/bibisect-win32-5.3
$ git bisect bad 5e01bd2a91a717cdaccff18de7c44de37b270914 is the first bad commit
commit 5e01bd2a91a717cdaccff18de7c44de37b270914
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Wed Nov 2 17:34:31 2016 -0700

    source 8f2dd1df1d6cc94ebbc1149de72bc6d6dffa6533
    source 8f2dd1df1d6cc94ebbc1149de72bc6d6dffa6533

:040000 040000 dcc5cddf0e9e7fa6f2d32dcb8ea6acef7442be20 a9fb8e3a47e6e596ad95065d5bf9ce2e7b67dc4c M      instdir

/cygdrive/d/sources/bibisect/bibisect-win32-5.3
$ git bisect log
# bad: [a374222bc87bd9e75ea2f1ca45d189932a1967f8] source aa09fd58bd499a2a2c3a32c5f613892bad54076c
# good: [defb73f1c6e2a66dbd21ba89e684f57427e8bc4b] source 5b168b3fa568e48e795234dc5fa454bf24c9805e

git bisect start 'master' 'oldest'
# good: [0b4408f0568ad1da0797543c0ee2955c386267ee] source 8f7886c742cae5e012e52029c20925aa7b0fb6ea
git bisect good 0b4408f0568ad1da0797543c0ee2955c386267ee
# good: [f8b90d89a8a858c3e0ce171f82ecb20b3ea80098] source 75239b77139434db9be5e0e7e133e3661c5404b0
git bisect good f8b90d89a8a858c3e0ce171f82ecb20b3ea80098
# bad: [7a279eab384549b23a159352c7308486555e0401] source 5e416099f088a2f8a8980e08e3d5b731da0a6d9c
git bisect bad 7a279eab384549b23a159352c7308486555e0401
# good: [a3f5fe1a4c6eabca0604654b0f9cb40ad59f8bf8] source 4814650c5021b72c81b4079f712a4c1baae0088b
git bisect good a3f5fe1a4c6eabca0604654b0f9cb40ad59f8bf8
# bad: [85bd972b6810fbdafee6bcf049da287516187e3e] source 4e59168ef004e7520ea7d78237a18208216a757c
git bisect bad 85bd972b6810fbdafee6bcf049da287516187e3e
# good: [e96edc165025e2e2a94d32febad5f2c80f036673] source c3a3b876a3a2a739b266622f51a00016a81b0cdf
git bisect good e96edc165025e2e2a94d32febad5f2c80f036673
# bad: [ea7807c5201f6d6874f5cf0323419563ec9fd09a] source 00e48a2ea00e973ae6e29950ca7c6846cfeabff4
git bisect bad ea7807c5201f6d6874f5cf0323419563ec9fd09a
# bad: [677e5c844d1350435d8ba69334acf088c5b1c5b4] source 2b3de550ef1e28cd4231352c91634f67aa6d642f
git bisect bad 677e5c844d1350435d8ba69334acf088c5b1c5b4
# good: [9a9f5bda6a82eadc6befbd1f5fa2e95173617cb0] source 01875c4514c777a43ee18014d9b0cb3f34eebbba
git bisect good 9a9f5bda6a82eadc6befbd1f5fa2e95173617cb0
# good: [c9058d690bed30c47c654beb7f58bff6fb45534a] source 30e2171b6eac8e373e31f20de4a0cee6d5d64a08
git bisect good c9058d690bed30c47c654beb7f58bff6fb45534a
# good: [a0dc71f49cc0766556e03cbf844c1b3fb59fe6be] source c8be45889217c555e4bec92af838d0524ceba4e0
git bisect good a0dc71f49cc0766556e03cbf844c1b3fb59fe6be
# bad: [a87553199f1d343477ac1ef44183cbf6510c54b5] source fdc77804d681ea36b8dd257d7a8669a99e1dbb98
git bisect bad a87553199f1d343477ac1ef44183cbf6510c54b5
# bad: [5e01bd2a91a717cdaccff18de7c44de37b270914] source 8f2dd1df1d6cc94ebbc1149de72bc6d6dffa6533
git bisect bad 5e01bd2a91a717cdaccff18de7c44de37b270914
# first bad commit: [5e01bd2a91a717cdaccff18de7c44de37b270914] source 8f2dd1df1d6cc94ebbc1149de72bc6d6dffa6533
Comment 5 Bartosz 2021-07-06 21:37:38 UTC
Created attachment 173400 [details]
How it should looks like.
Comment 6 QA Administrators 2023-07-07 03:16:47 UTC Comment hidden (obsolete)
Comment 7 Bartosz 2023-07-07 13:52:26 UTC
Created attachment 188251 [details]
Minimal EMF image where bug is visible
Comment 8 Bartosz 2023-07-07 13:53:07 UTC
Created attachment 188252 [details]
Minimal EMF image opened in MS Paint
Comment 9 faludiz 2023-10-22 08:33:55 UTC
Created attachment 190369 [details]
emf file saved by ITR
Comment 10 faludiz 2023-10-22 08:34:37 UTC
Created attachment 190370 [details]
emf file saved by ITR converted to PNG with IrfanView
Comment 11 faludiz 2023-10-22 08:35:06 UTC
Created attachment 190371 [details]
emf file saved by FreeTR
Comment 12 faludiz 2023-10-22 08:35:49 UTC
Created attachment 190372 [details]
emf file saved by FreeTR converted to PNG with IrfanView
Comment 13 faludiz 2023-10-22 08:42:52 UTC
The bug is occured again :(
I have attached some new test files
https://bugs.documentfoundation.org/attachment.cgi?id=190369
https://bugs.documentfoundation.org/attachment.cgi?id=190370
https://bugs.documentfoundation.org/attachment.cgi?id=190371
https://bugs.documentfoundation.org/attachment.cgi?id=190372

Just drop the emf files to the LO! The result is disappointing. Same lineweights everywhre, black renctangeles on texts.
In other softwares (IrfanView, XnView, MS Office, MS Paint) the emf files are looks right.

Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 14 faludiz 2024-09-29 17:36:53 UTC
still malfunctioning
Comment 15 Kami 2024-10-30 07:58:51 UTC
Remains the problem with:


Version: 24.8.2.1 (X86_64) / LibreOffice Community

Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13

CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win

Locale: hu-HU (hu_HU); UI: hu-HU

Calc: threaded
Comment 16 Bartosz 2024-10-31 20:21:36 UTC
It looks like the background defined with:
  fo:background-color="#ff0000"

Will take a look at it
Comment 17 Kami 2025-08-22 05:30:20 UTC
Still not okay.

Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: hu-HU
Ubuntu package version: 4:25.2.5~rc2-0ubuntu0.24.04.1~lo1
Calc: threaded
Comment 18 faludiz 2026-02-06 18:56:55 UTC
I don't understand why it can't be fixed if it worked fine before...
Comment 19 Commit Notification 2026-02-07 22:44:05 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eddbe3b36d257ca2163c9e971fff47e29ccc0ccf

tdf#126965 emfio: fix opaque background on underlined text...

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2026-02-09 04:17:39 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/b6a3a10140708380dc98a3ecb7437ac976bca393

tdf#126965 emfio: fix opaque background on underlined text...

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2026-02-10 21:11:13 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/a41e93d479a487e3527cfdfea1d73e01f96e2944

tdf#126965 emfio: fix opaque background on underlined text...

It will be available in 25.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.