tdf#126965 emfio: fix opaque background on underlined text...

when BkMode is TRANSPARENT

In DrawText, the font's fill color was unconditionally set to maBkColor
before checking the background mode. When BkMode is TRANSPARENT, VCL's
underline rendering uses the font's fill color directly, ignoring the
transparency flag, causing an unwanted opaque background behind
underlined text.

Set COL_TRANSPARENT as the fill color when BkMode is TRANSPARENT, and
only use maBkColor when OPAQUE.

Change-Id: I0e94d2a1beae8ce2feecb0f7c0f8e03b36d2d80a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198889
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Jenkins
(cherry picked from commit eddbe3b36d257ca2163c9e971fff47e29ccc0ccf)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198919
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>