emfio/source/reader/mtftools.cxx
@@ -1773,12 +1773,17 @@ namespace emfio
         }
         vcl::Font aTmp( maFont );
         aTmp.SetColor( maTextColor );
-        aTmp.SetFillColor( maBkColor );
 
         if( mnBkMode == BackgroundMode::Transparent )
+        {
+            aTmp.SetFillColor( COL_TRANSPARENT );
             aTmp.SetTransparent( true );
+        }
         else
+        {
+            aTmp.SetFillColor( maBkColor );
             aTmp.SetTransparent( false );
+        }
 
         aTmp.SetAlignment( eTextAlign );
 
